Fix nav on mobile

--- a/src/ui/chimera.css
+++ b/src/ui/chimera.css
@@ -136,7 +136,7 @@ pre {
   flex-direction: column-reverse;
   height: 0;
   overflow: hidden;
-  margin: 0 0 1.85rem 0;
+  margin: 0;
   z-index: 4;
   list-style-type: none;
   transition: height ease-in 0.15s;
